# narrator

./: .gitignore  Makefile  README.md  app.py  config.yml  example.env  pyproject.toml
narrator/: __init__.py  __main__.py  article.py  bot.py  config.py  exceptions.py  sub_utils.py  text.py  thirdparty.py  to_txt.py  url_parser.py  utils.py  voice.py  web_parser.py
narrator/bot/: __init__.py  __main__.py  authorizer.py  bot.py  dispatcher.py
narrator/bot/n_bot/: __main__.py  dispatcher.py
narrator/bot/n_bot/extractor/: __init__.py
narrator/bot/n_bot/extractor/file/: base_file_extractor.py
narrator/bot/n_bot/extractor/url/: __init__.py  base_url_extractor.py  habr_extractor.py
narrator/bot/ttt_bot/: __main__.py
narrator/bot/ttt_bot/tic_tac_toe/: dispatcher.py
narrator/reader/: __init__.py  base_extractor.py  base_reader.py
narrator/reader/file/: __init__.py  base_file_reader.py  txt_reader.py
narrator/reader/url/: __init__.py  base_url_extractor.py  base_url_reader.py  habr_extractor.py  habr_reader.py
narrator/speaker/: __init__.py  speaker.py
narrator/telegram/: bot.py  worker.py
narrator/text/: language.py  text.py  web_parser.py
narrator/ttt_bot/: __main__.py
narrator/ttt_bot/tic_tac_toe/: dispatcher.py  game.py
tests/: conftest.py  test.env  test_sub_utils.py  test_url_parser.py
tests/config/: config.yml  test_config.py
tests/telegram/: test_worker.py
tests/test_config/: test_config.py
